--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -18,6 +18,7 @@
      text-decoration: none;
      padding:5%;
      display:flex;
+     
     
 }
 
@@ -124,16 +125,19 @@ transform: scale(1.1, 1.1);
       </div>
      
       <div class="col-sm-12" style="padding-top:20%;">
-        <a href="{% url 'counsellingUrls:days' pk 'MONDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> MONDAY</span></a><br />
+      <a href="{% url 'counsellingUrls:days' pk 'MONDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> MONDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'TUESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> TUESDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'WEDNESDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> WEDNESDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'THRUSDAY' %}" id = "able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> THRUSDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'FRIDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> FRIDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'SATURDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SATURDAY</span></a><br />
         <a href="{% url 'counsellingUrls:days' pk 'SUNDAY'%}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> SUNDAY</span></a><br />
+         <a href="{% url 'counsellingUrls:mytimes' pk %}" id="able"><span><i class="fas fa-cloud-sun" id = "ableicon"></i></span><span id = "ables"> My Times</span></a><br />
+
       </div>
+            <a href= "{% url 'counsellingUrls:dashboardPage' pk 'profile' %} " style="color:white;">Back</a>
+
       <div>
-      <a href= "{% url 'counsellingUrls:dashboardPage' pk %} " style="color:white;">Back</a>
     </div>
     </div>
     
