--- a/counsellingApp/templates/app/login.html
+++ b/counsellingApp/templates/app/login.html
@@ -1,9 +1,7 @@
+{% include 'app/header.html'%}
+
 {% load static %} 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<meta name="viewport" content="width=device-width">
-<title>Login</title
+
 ><!------>
 <!------>
 
