--- a/bookingApp/templates/bookings.html
+++ b/bookingApp/templates/bookings.html
@@ -37,7 +37,11 @@
                 {% endfor %}
             </tbody>
           </table>
-
+<script type="text/javascript">
+            $(document).ready(function () {
+              $("#table").DataTable();
+            });
+          </script>
         </div>
 
 {% endblock %}
