--- a/counsellingApp/templates/app/availiable.html
+++ b/counsellingApp/templates/app/availiable.html
@@ -5,6 +5,7 @@
 #avapad{
     height:95%;
     box-shadow: 1px 1px 12px -5px;
+    padding-bottom:2%;
     
     overflow-y:scroll;
     background:white;
