--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -76,7 +76,8 @@
 	        <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="{% url 'bookingUrls:indexPage' pk %}" class="nav-link">Home</a></li>
           <li class="nav-item"><a href="{% url 'bookingUrls:contactPage'%}" class="nav-link">Contact</a></li>
-	        </ul>
+	        <li class="nav-item" ><a href="{% url 'bookingUrls:dashboard' pk %}" class="nav-link" >Dashboard</a></li>
+        </ul>
 	      </div>
 	    </div>
 	  </nav>
